--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,27 @@ nav {
     width: 100%;
     display: flex;
     justify-content: flex-end;
+}
+
+nav li {
+    display: inline-block;
     font-family: "Raleway", sans-serif;
-    font-size: 15px;
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+    margin: 6px;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:visited{
+    color: gray;
+}
+
+a:hover{
+    color: #0066CC;
 }
 
 .content {
